--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,14 @@ name: Test
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+      - 'feat*'
   pull_request:
-    branches: [main]
+    branches:
+      - main
+      - 'feat*'
+  workflow_dispatch:
 
 jobs:
   test:
